# Projeto-Final

./: .env.example  Cargo.toml  README.md
data/: conversations.json
data/exports/: teste_1_1776376213.md
src/: main.rs
src/ai/: mod.rs
src/api/: mod.rs
src/bot/: commands.rs  mod.rs
src/openapi/: openapi.yaml
