[package]
name = "projeto_final"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
url = "=2.4.1"
indexmap = "=2.2.6"
